# code-samples

./: .gitignore  .gitmodules  README.md  license.txt
MATLAB_arrayfun/: ArrayfunArticle.m  README.md  drawAntenna.m  drawMap.m  drawMultipleSignalMaps.m  drawSignalMap.m  multipleSignalMaps.m  powerCalculationWithGpuArray.m  powerKernel.m  reportTime.m
MATLAB_deeplearning/: PetDetectionRecognitionScript.m  README.md  cnnPredict.m  filterRegions.m  findPet.m  getImageLabels.m
c++11_cuda/: Makefile  README.md  c++11_cuda  c++11_cuda.cu  warandpeace.txt
math-library-blog/: cublas_dgemm.c
posts/TensorRT-3.0/: convert.ipynb  test.ipynb  train.ipynb
posts/TensorRT-introduction/: Makefile  cudaWrapper.h  ioHelper.cpp  ioHelper.h  simpleOnnx.cpp  simpleOnnx_1.cpp  simpleOnnx_2.cpp
posts/american-options/: LongstaffSchwartz_vs10.sln  LongstaffSchwartz_vs11.sln  Makefile  Readme.md  longstaff_schwartz_svd_2.cu
posts/cmake/: CMakeLists.txt  particle.cu  particle.h  randomize.cpp  randomize.h  test.cu  v3.cu
posts/cmake_ptx/: CMakeLists.txt  main.cu
posts/cuda-vmm/: Makefile  cuvector.cpp  cuvector.h  sync_main.cu  vector_main.cpp
posts/cufft-callbacks/: Makefile  common.h  cufft_callbacks.cu  cufft_no_callbacks.cu
posts/egl_OpenGl_without_Xserver/: Makefile  Readme.txt  tinyegl.cc
posts/grcuda/: README.md
posts/grcuda/R/: cuml_dbscan.R  (+1 more)
posts/gups/: LICENSE  LICENSE.gups.cu  Makefile  README.md  gups.cu  run.py
posts/math-libraries-intro/: Makefile  README.md  cublas-example.cu  openblas-example.c  openblas-example.cpp
posts/mixed-precision/: .gitignore  Makefile  fp16_conversion.h  haxpy.cu
posts/nvml/: Makefile  matrixMul.cu  nvml_test.cu
posts/nvtx/: Makefile  compiler_inst_nvtx.cu  env_hpc_sdk.sh  inst_nvtx.cpp  manual_nvtx.cu
posts/openacc-unified-memory-jacobi/: Makefile  laplace2d.c
posts/parallel_reduction_with_shfl/: Makefile  block_reduce.h  device_reduce_atomic.h  device_reduce_block_atomic.h  device_reduce_stable.h  device_reduce_warp_atomic.h  fake_atomic.h  fake_shfl.h  getdata.sh  main.cu  readme.md  warp_reduce.h
posts/printf-alternative/: CASerror.h  CMakeLists.txt  README.md  main.cu
posts/rnn/: LSTM.cu  Makefile  README.md
posts/separate-compilation-linking/: main.cpp  makefile  particle.cpp  particle.h  v3.cpp  v3.h
posts/tensor-cores/: Makefile  README.md  simpleTensorCoreGEMM.cu
posts/unified-memory/: .gitignore  Makefile  README.md  dataElem.cu  dataElem_um.cu  dataElem_um_c++_1.cu  dataElem_um_c++_2.cu
posts/unified-memory-oversubscription/: Makefile  README.md  uvm_oversubs.cu
series/cuda-fortran/: a.out  async.cuf  finiteDifference.cuf  kernels_m.mod  shared.cuf  transpose.cuf
(+123 files in other folders)
